[package]
name = "rooch-db"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }

raw-store = { workspace = true }
moveos-types = { workspace = true }
moveos-store = { workspace = true }
accumulator = { workspace = true }
moveos-common = { workspace = true }

rooch-config = { workspace = true }
rooch-store = { workspace = true }
rooch-indexer = { workspace = true }
rooch-types = { workspace = true }