[package]
name = "rooch-event"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
coerce = { workspace = true }
tracing = { workspace = true }

moveos-eventbus = { workspace = true }

rooch-types = { workspace = true }