[package]
name = "rooch-executor"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
coerce = { workspace = true }
serde = { workspace = true }
tokio = { features = ["full"], workspace = true }
tracing = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }
function_name = { workspace = true }

move-core-types = { workspace = true }
move-resource-viewer = { workspace = true }

moveos = { workspace = true }
moveos-store = { workspace = true }
moveos-types = { workspace = true }
moveos-eventbus = { workspace = true }
metrics = { workspace = true }

rooch-types = { workspace = true }
rooch-genesis = { workspace = true }
rooch-store = { workspace = true }
