[package]
name = "rooch-framework-release"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { features = [ "derive", ], workspace = true }
itertools = { workspace = true }

move-binary-format = { workspace = true }
moveos-stdlib-builder = { workspace = true }
rooch-genesis-builder = { workspace = true }
rooch-types = { workspace = true }