[package]
name = "rooch-framework-tests"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true }
ethers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
bcs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
include_dir = { workspace = true }
musig2 = { workspace = true }
miniscript = { workspace = true }
coerce = { workspace = true }
tokio = { workspace = true }
clap = { features = ["derive", ], workspace = true }

move-core-types = { workspace = true }
moveos-types = { workspace = true }
moveos-store = { workspace = true }
moveos-config = { workspace = true }
moveos-eventbus = { workspace = true }
metrics = { workspace = true }

rooch-genesis = { workspace = true }
rooch-types = { workspace = true }
rooch-key = { workspace = true }
rooch-executor = { workspace = true }
rooch-config = { workspace = true }
rooch-db = { workspace = true }
rooch-event = { workspace = true }
rooch-relayer = { workspace = true }

bitcoin-move = { workspace = true }
framework-builder = { workspace = true }

[dev-dependencies]
rooch-integration-test-runner = { workspace = true }
datatest-stable = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[test]]
harness = false
name = "tests"