[package]
name = "rooch-genesis"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
clap = { features = ["derive", ], workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { features = ["full"], workspace = true }
include_dir = { workspace = true }


move-core-types = { workspace = true }
move-vm-runtime = { workspace = true, features = ["stacktrace", "debugging", "testing"] }
moveos-types = { workspace = true }
moveos = { workspace = true }
moveos-store = { workspace = true }
accumulator = { workspace = true }

rooch-framework = { workspace = true }
rooch-types = { workspace = true }
rooch-store = { workspace = true }
rooch-indexer = { workspace = true }
rooch-db = { workspace = true }
rooch-config = { workspace = true }

bitcoin-move = { workspace = true }
framework-builder = { workspace = true }
framework-release = { workspace = true }