[package]
name = "rooch-indexer"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
fastcrypto = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_with = { workspace = true }
clap = { workspace = true }
tap = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
backoff = { workspace = true }
tokio = { workspace = true, features = ["full"] }
diesel = { workspace = true }
diesel-derive-enum = { workspace = true }
diesel_migrations = { workspace = true }
cached = { workspace = true }

move-core-types = { workspace = true }
move-bytecode-utils = { workspace = true }
move-binary-format = { workspace = true }
move-resource-viewer = { workspace = true }

moveos-config = { workspace = true }
moveos-types = { workspace = true }

rooch-types = { workspace = true }
rooch-config = { workspace = true }