[package]
name = "rooch-indexer"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
coerce = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
tap = { workspace = true }
prometheus = { workspace = true }
function_name = { workspace = true }

move-core-types = { workspace = true }

moveos-config = { workspace = true }
moveos-types = { workspace = true }
moveos-store = { workspace = true }
metrics = { workspace = true }

rooch-types = { workspace = true }
rooch-config = { workspace = true }
