[package]
name = "rooch-integration-test-runner"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = { workspace = true }
bcs = { workspace = true }
clap = { features = [ "derive",], workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
codespan-reporting = { workspace = true }
regex = { workspace = true }
datatest-stable = { workspace = true }
walkdir = { workspace = true }

move-binary-format = { workspace = true }
move-bytecode-utils = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-core-types = { workspace = true }
move-compiler = { workspace = true }
move-command-line-common = { workspace = true }
move-stdlib = { workspace = true }
move-unit-test = { workspace = true, optional = true }
move-vm-runtime = { workspace = true }
move-vm-test-utils = { workspace = true }
move-vm-types = { workspace = true }
move-resource-viewer = { workspace = true }
move-transactional-test-runner = { workspace = true }
move-package = { workspace = true }

moveos-store = { workspace = true }
moveos-stdlib = { workspace = true }
moveos-stdlib-builder = { workspace = true }
moveos = { workspace = true }
moveos-types = { workspace = true }
moveos-verifier = { workspace = true }

rooch-types ={ workspace = true }
rooch-framework = { workspace = true }
rooch-genesis = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
datatest-stable = { workspace = true }

[[test]]
harness = false
name = "tests"