[package]
name = "rooch-integration-test-runner"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = { workspace = true }
bcs = { workspace = true }
clap = { features = ["derive", ], workspace = true }
codespan-reporting = { workspace = true }
regex = { workspace = true }
datatest-stable = { workspace = true }
walkdir = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }

move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-compiler = { workspace = true }
move-command-line-common = { workspace = true }
move-vm-runtime = { workspace = true, features = ["stacktrace", "debugging", "testing"] }
move-transactional-test-runner = { workspace = true }
move-package = { workspace = true }

moveos-store = { workspace = true }
moveos = { workspace = true }
moveos-types = { workspace = true }
moveos-verifier = { workspace = true }
moveos-config = { workspace = true }

rooch-types = { workspace = true }
rooch-framework = { workspace = true }
rooch-genesis = { workspace = true }

[dev-dependencies]
datatest-stable = { workspace = true }

[[test]]
harness = false
name = "tests"