[package]
name = "rooch-key"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { workspace = true }
bip32 = { workspace = true }
enum_dispatch = { workspace = true }
fastcrypto = { workspace = true, features = ["copy_key"] }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
signature = { workspace = true }
tiny-bip39 = { workspace = true }
rooch-types = { workspace = true }
proptest = { optional = true, workspace = true }
proptest-derive = { optional = true, workspace = true }
argon2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }

[features]
default = []
fuzzing = [
    "proptest",
    "proptest-derive",
]