[package]
name = "rooch-open-rpc"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bcs = { workspace = true }
versions = { workspace = true }
pretty_assertions = { workspace = true }

[dev-dependencies]
anyhow  = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
fastcrypto = { workspace = true }
rand = { workspace = true }
rooch-rpc-server = { workspace = true }
rooch-rpc-api = { workspace = true }


[[example]]
name = "generate-json-rpc-spec"
path = "src/generate_json_rpc_spec.rs"
test = false
