[package]
name = "rooch-open-rpc"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
versions = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
fastcrypto = { workspace = true }
rand = { workspace = true }
